--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -5,7 +5,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Calculator">
+    tools:context=".CalculatorExercise">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <EditText
+            android:id="@+id/tvSolution"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:autofillHints="false"
+            android:inputType="none"
+            android:text=""
+            android:textAlignment="textEnd"
+            android:textSize="36sp"
+            tools:ignore="LabelFor,VisualLintTextFieldSize" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tvResult"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_marginTop="120dp"
+                android:autofillHints="false"
+                android:inputType="none"
+                android:text=""
+                android:textAlignment="textEnd"
+                android:textSize="36sp"
+                tools:ignore="LabelFor,VisualLintTextFieldSize" />
+        </LinearLayout>
+
+    </LinearLayout>
 
     <TableLayout
         android:id="@+id/tableLayout"
@@ -13,7 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="150dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/input"
+        app:layout_constraintTop_toBottomOf="@+id/tvResult"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintWidth_default="spread"
@@ -121,7 +158,8 @@
                 android:layout_weight="1"
                 android:onClick="BTN1"
                 android:text="@string/one"
-                android:textColor="#000000" />
+                android:textColor="#000000"
+                tools:ignore="VisualLintButtonSize" />
 
             <Button
                 android:id="@+id/BTN2"
@@ -131,7 +169,8 @@
                 android:layout_weight="1"
                 android:onClick="BTN2"
                 android:text="@string/two"
-                android:textColor="#000000" />
+                android:textColor="#000000"
+                tools:ignore="VisualLintButtonSize" />
 
             <Button
                 android:id="@+id/BTN3"
@@ -197,24 +236,10 @@
                 android:layout_weight="1"
                 android:onClick="BTNequal"
                 android:text="@string/equals"
-                android:textColor="#000000" />
+                android:textColor="#000000"
+                tools:ignore="VisualLintButtonSize" />
         </TableRow>
     </TableLayout>
-
-    <EditText
-        android:id="@+id/input"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:text="@string/display"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:autofillHints="false"
-        android:inputType="none"
-        android:textSize="36sp"
-        android:textAlignment="textEnd"
-        tools:ignore="LabelFor" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
