--- a/app/src/main/res/layout/activity_button_exercise.xml
+++ b/app/src/main/res/layout/activity_button_exercise.xml
@@ -7,7 +7,7 @@
     android:onClick="changeBackground">
 
     <RelativeLayout
-        android:id="@+id/Rlayout"
+        android:id="@+id/RLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -53,12 +53,10 @@
         android:layout_width="378dp"
         android:layout_height="wrap_content"
         android:text="Disappear"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button10"
-        app:layout_constraintVertical_bias="0.019" />
+        app:layout_constraintTop_toBottomOf="@+id/button10" />
 
     <Button
         android:id="@+id/button7"
